make catalog.html

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
       </section>
     </main>
     <footer>
-      <section class="footer">
-        <b class="logo logo--main logo--footer">DEVICE</b>
+      <div class="footer">
+        <a class="logo logo--main logo--footer" href="#">DEVICE</a>
         <ul class="footer__user">
           <li><a href="#">Войти</a></li>
           <li><a href="#">Сравнить</a></li>
@@ -180,7 +180,7 @@
           <li><a class="footer__social--tw" href="#">Twitter</a></li>
         </ul>
         <a class="footer_copiright" href="#">HTMLacademy</a>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
