--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <label for="slide03">03</label>
         </div>
         <article class="slide slide-1">
-          <img class="slide__img" src="/img/slide01.png" width="384" height="486" alt="Делай селфи, как Бен Стиллер!">
+          <img class="slide__img" src="/img/slide1.png" width="384" height="486" alt="Делай селфи, как Бен Стиллер!">
           <h3 class="slide__title">Делай селфи, как Бен Стиллер!</h3>
           <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
           <a class="slide__btn" href="#">Подробнее</a>
@@ -67,7 +67,7 @@
           </table>
         </article>
         <article class="slide slide-2">
-          <img class="slide__img" src="/img/slide01.png" width="384" height="486" alt="Худеем правильно!">
+          <img class="slide__img" src="/img/slide2.png" width="384" height="486" alt="Худеем правильно!">
           <h3 class="slide__title">Худеем правильно!</h3>
           <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
           <a class="slide__btn" href="#">Подробнее</a>
@@ -79,7 +79,7 @@
           </table>
         </article>
         <article class="slide slide-3">
-          <img class="slide__img" src="/img/slide01.png" width="384" height="486" alt="Порхает как бабочка, жалит как пчела!">
+          <img class="slide__img" src="/img/slide3.png" width="384" height="486" alt="Порхает как бабочка, жалит как пчела!">
           <h3 class="slide__title">Порхает как бабочка, жалит как пчела!</h3>
           <p></p>
           <a class="slide__btn" href="#">Подробнее</a>
@@ -131,10 +131,10 @@
       </section>
       <section class="brands">
         <ul class="brands__list">
-          <li><a href="#"><img src="img/dji.png" width="260" height="100" alt="DJI"></a></li>
-          <li><a href="#"><img src="img/spg.png" width="260" height="100" alt="SPGadgets"></a></li>
-          <li><a href="#"><img src="img/gopro.png" width="260" height="100" alt="GoPro"></a></li>
-          <li><a href="#"><img src="img/vive.png" width="260" height="100" alt="VIVE"></a></li>
+          <li><a href="#"><img src="img/logo1.jpg" width="260" height="100" alt="DJI"></a></li>
+          <li><a href="#"><img src="img/logo2.jpg" width="260" height="100" alt="SPGadgets"></a></li>
+          <li><a href="#"><img src="img/logo3.jpg" width="260" height="100" alt="GoPro"></a></li>
+          <li><a href="#"><img src="img/logo4.jpg" width="260" height="100" alt="VIVE"></a></li>
         </ul>
       </section>
       <section class="about">
@@ -151,13 +151,13 @@
       <section class="contacts">
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-        <img class="contacts__map" src="img/map.png" width="560" height="222" alt="г. Москва, ул. Строителей, 15">
+        <img class="contacts__map" src="img/map.jpg" width="560" height="222" alt="г. Москва, ул. Строителей, 15">
         <a class="btn contacts__btn" href="#">Напишите нам</a>
       </section>
     </main>
     <footer>
       <div class="footer">
-        <a class="logo logo--main logo--footer" href="#"><img src="img/logo.svg" width="164" height="36" alt="DEVICE"></a>
+        <a class="logo logo--main logo--footer" href="#"><img src="img/logo-footer.svg" width="164" height="36" alt="DEVICE"></a>
         <ul class="footer__user">
           <li><a class="footer__user--singin" href="#">Войти</a></li>
           <li><a class="footer__user--compare" href="#">Сравнить</a></li>
@@ -186,7 +186,7 @@
     <section class="modal modal--map">
       <h2 class="visually-hidden">Наш адрес</h2>
       <a class="modal__close">Закрыть</a>
-      <img class="modal__map-img" src="img/map-modal.png" width="960" height="559" alt="г. Москва, ул. Строителей, 15">
+      <img class="modal__map-img" src="img/map-modal.jpg" width="960" height="559" alt="г. Москва, ул. Строителей, 15">
     </section>
   </body>
 </html>
