--- a/catalog.html
+++ b/catalog.html
@@ -107,7 +107,7 @@
     </main>
     <footer>
       <div class="footer">
-        <a class="logo logo--main logo--footer" href="#">DEVICE</a>
+        <a class="logo logo--main logo--footer" href="/"><img src="img/logo-footer.svg" width="164" height="36" alt="DEVICE"></a>
         <ul class="footer__user">
           <li><a class="footer__user--profile" href="#">Валентин Петухов</a></li>
           <li><a class="footer__user--exit" href="#">Выйти</a></li>
