--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <label for="slide03">03</label>
         </div>
         <article class="slide slide-1">
-          <img class="slide__img" src="/img/slide1.png" width="384" height="486" alt="Делай селфи, как Бен Стиллер!">
+          <img class="slide__img" src="img/slide1.png" width="384" height="486" alt="Делай селфи, как Бен Стиллер!">
           <h3 class="slide__title">Делай селфи, как Бен Стиллер!</h3>
           <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
           <a class="slide__btn" href="#">Подробнее</a>
@@ -67,7 +67,7 @@
           </table>
         </article>
         <article class="slide slide-2">
-          <img class="slide__img" src="/img/slide2.png" width="384" height="486" alt="Худеем правильно!">
+          <img class="slide__img" src="img/slide2.png" width="384" height="486" alt="Худеем правильно!">
           <h3 class="slide__title">Худеем правильно!</h3>
           <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
           <a class="slide__btn" href="#">Подробнее</a>
@@ -79,7 +79,7 @@
           </table>
         </article>
         <article class="slide slide-3">
-          <img class="slide__img" src="/img/slide3.png" width="384" height="486" alt="Порхает как бабочка, жалит как пчела!">
+          <img class="slide__img" src="img/slide3.png" width="384" height="486" alt="Порхает как бабочка, жалит как пчела!">
           <h3 class="slide__title">Порхает как бабочка, жалит как пчела!</h3>
           <p></p>
           <a class="slide__btn" href="#">Подробнее</a>
